Modulo Pruebas (No terminado)

--- a/EduClass.Web/App_Code/HelperView.cshtml
+++ b/EduClass.Web/App_Code/HelperView.cshtml
@@ -32,6 +32,24 @@
 
 }
 
+@helper LabelEnableOrDisable(bool value)
+{
+    if (value)
+    {
+        <span class="label label-success">Activa</span>
+    }
+    else
+    {
+        <span class="label label-danger">Desactivada</span>
+    }
+
+}
+
+@helper FormatDateTime(DateTime value)
+{
+    <span>@value.ToString("dd/MM/yyyy HH:mm")</span>
+}
+
 
 
 
