--- a/EduClass.Web/Views/Menu/_menuTop.cshtml
+++ b/EduClass.Web/Views/Menu/_menuTop.cshtml
@@ -25,32 +25,53 @@
                 </button>
             }
             <ul class="dropdown-menu" id="gruposDDL" role="menu">
-                @try
-                {
 
+                @if (UserSession.GetUserGroups().Count() != 0)
+                {
                     foreach (Group item in UserSession.GetUserGroups())
                     {
-                        <li><a href="#" id="@item.Id">@item.Name</a></li>
+                        <li>
+                            <a href="#" id="@item.Id">
+                                @if (UserSession.GetCurrentGroup().Id == item.Id)
+                                {
+                                    <strong>@item.Name</strong>
+                                }
+                                else
+                                {
+                                    @item.Name
+                                }
+                            </a>
+                        </li>
                     }
                 }
-                catch (Exception ex)
+                else
                 {
-                    <li><a href="#">No estas en ningun grupo</a></li>
+                    <li class="active">
+                        <span>No tienes grupos</span>
+                    </li>
                 }
 
+                <li class="divider"></li>
+                <li>
+                    @if (EduClass.Web.Infrastructure.Sessions.UserSession.GetCurrentUser() is EduClass.Entities.Student)
+                    {
+                        <a href="@Url.Action("JoinStudent", "Groups")"><span class="text-primary"><strong>Unirse a un grupo</strong></span></a>
+                    }
+                    else
+                    {
+                        <a href="@Url.Action("Create", "Groups")"><span class="text-primary"><strong>Agregar grupo</strong></span></a>
+                    }
+                </li>
 
             </ul>
         </div><!-- input-group -->
     </div>
 
 
-
-        
-    
     <div class="header-right">
 
         <ul class="headermenu">
-            <li class="hidden">
+            <li>
                 <div id="noticePanel" class="btn-group">
                     <button class="btn btn-notice alert-notice" data-toggle="dropdown">
                         <i class="fa fa-globe"></i>
@@ -60,7 +81,6 @@
                             <!-- Nav tabs -->
                             <ul class="nav nav-tabs nav-justified" role="tablist">
                                 <li class="active"><a data-target="#notification" data-toggle="tab">Notifications (2)</a></li>
-                                <li><a data-target="#reminders" data-toggle="tab">Reminders (4)</a></li>
                             </ul>
 
                             <!-- Tab panes -->
@@ -128,67 +148,6 @@
                                     </ul>
                                     <a class="btn-more" href="">View More Notifications <i class="fa fa-long-arrow-right"></i></a>
                                 </div><!-- tab-pane -->
-
-                                <div role="tabpanel" class="tab-pane" id="reminders">
-                                    <h1 id="todayDay" class="today-day">...</h1>
-                                    <h3 id="todayDate" class="today-date">...</h3>
-
-                                    <h5 class="today-weather"><i class="wi wi-hail"></i> Cloudy 77 Degree</h5>
-                                    <p>Thunderstorm in the area this afternoon through this evening</p>
-
-                                    <h4 class="panel-title">Upcoming Events</h4>
-                                    <ul class="list-group">
-                                        <li class="list-group-item">
-                                            <div class="row">
-                                                <div class="col-xs-2">
-                                                    <h4>20</h4>
-                                                    <p>Aug</p>
-                                                </div>
-                                                <div class="col-xs-10">
-                                                    <h5><a href="">HTML5/CSS3 Live! United States</a></h5>
-                                                    <small>San Francisco, CA</small>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item">
-                                            <div class="row">
-                                                <div class="col-xs-2">
-                                                    <h4>05</h4>
-                                                    <p>Sep</p>
-                                                </div>
-                                                <div class="col-xs-10">
-                                                    <h5><a href="">Web Technology Summit</a></h5>
-                                                    <small>Sydney, Australia</small>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item">
-                                            <div class="row">
-                                                <div class="col-xs-2">
-                                                    <h4>25</h4>
-                                                    <p>Sep</p>
-                                                </div>
-                                                <div class="col-xs-10">
-                                                    <h5><a href="">HTML5 Developer Conference 2015</a></h5>
-                                                    <small>Los Angeles CA United States</small>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item">
-                                            <div class="row">
-                                                <div class="col-xs-2">
-                                                    <h4>10</h4>
-                                                    <p>Oct</p>
-                                                </div>
-                                                <div class="col-xs-10">
-                                                    <h5><a href="">AngularJS Conference 2015</a></h5>
-                                                    <small>Silicon Valley CA, United States</small>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                    <a class="btn-more" href="">View More Events <i class="fa fa-long-arrow-right"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -197,31 +156,29 @@
             <li>
                 <div class="btn-group">
                     <button type="button" class="btn btn-logged" data-toggle="dropdown">
-                    @try
-                    {
-                        if (UserSession.GetCurrentUser().Avatar == null || UserSession.GetCurrentUser().Avatar.UrlPhoto == "")
+                        @try
+                        {
+                            if (UserSession.GetCurrentUser().Avatar == null || UserSession.GetCurrentUser().Avatar.UrlPhoto == "")
+                            {
+                                <img id="imgAvatarTop" src="@Url.Content("~/Content/images/default.png")" alt="" />
+                            }
+                            else
+                            {
+                                <img id="imgAvatarTop" src="@Url.Content(UserSession.GetCurrentUser().Avatar.UrlPhoto)" alt="" />
+                            }
+                        }
+                        catch (Exception ex)
                         {
                             <img id="imgAvatarTop" src="@Url.Content("~/Content/images/default.png")" alt="" />
                         }
-                        else
-                        {
-                            <img id="imgAvatarTop" src="@Url.Content(UserSession.GetCurrentUser().Avatar.UrlPhoto)" alt="" />
-                        }
 
-
-                    }
-                    catch (Exception ex)
-                    {
-                        <img id="imgAvatarTop" src="@Url.Content("~/Content/images/default.png")" alt="" />
-                    }
-
-                    @UserSession.GetCurrentUser().FirstName
+                        @UserSession.GetCurrentUser().FirstName
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu pull-right">
                         <li><a href="@Url.Action("Me", "Users")"><i class="glyphicon glyphicon-user"></i> Mi Perfil</a></li>
                         <li><a href="@Url.Action("Edit","Users")"><i class="glyphicon glyphicon-cog"></i> Preferencias de Cuenta</a></li>
-                        <li><a href="@Url.Action("ViewFaq","Faq")"><i class="glyphicon glyphicon-question-sign"></i> Ayuda</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-question-sign"></i> Ayuda</a></li>
                         <li><a href="@Url.Action("SignOut", "Users")"><i class="glyphicon glyphicon-log-out"></i> Cerrar Sesión</a></li>
                     </ul>
                 </div>
@@ -231,7 +188,7 @@
 
                     <span class="badge-alert"></span>
                     <i class="fa fa-comments-o"></i>
-                </a>  
+                </a>
             </li>
         </ul>
 
@@ -240,29 +197,29 @@
 @Scripts.Render("~/bundles/jquery")
 <script src="~/Scripts/app/helpersSite.js"></script>
 <script>
-        $(document).ready(function () {
-         
-            
-            $("#gruposDDL li a").click(function () {
-                
-                var selectedId = $(this).attr('id');
+    $(document).ready(function () {
 
-                $.ajax({
-                    url: '@Url.Action("ChangeGroup", "Groups")',
-                    type: 'POST',
-                    contentType: 'application/json;',
-                    data: JSON.stringify({ id: selectedId }),
-                    success: function() { 
-                        location.reload();//Recarga la pagina entera 
-                       
-                    }
-                });
 
-                $("#botonMenu:first-child").text($(this).text());
-                $("#botonMenu:first-child").val($(this).text());
-                
+        $("#gruposDDL li a").click(function () {
+
+            var selectedId = $(this).attr('id');
+
+            $.ajax({
+                url: '@Url.Action("ChangeGroup", "Groups")',
+                type: 'POST',
+                contentType: 'application/json;',
+                data: JSON.stringify({ id: selectedId }),
+                success: function () {
+                    location.reload();//Recarga la pagina entera
+
+                }
             });
 
-            
+            $("#botonMenu:first-child").text($(this).text());
+            $("#botonMenu:first-child").val($(this).text());
+
         });
+
+
+    });
 </script>
