Siguiendo con integracion de Dropbox.

--- a/EduClass.Web/Views/Mail/SendEmail.cshtml
+++ b/EduClass.Web/Views/Mail/SendEmail.cshtml
@@ -1,10 +1,10 @@
 ﻿@model EduClass.Web.Infrastructure.ViewModels.MailViewModel
 
 @{
-    ViewBag.Title = "Enviar Mail";
+    ViewBag.Title = "Enviar Mensaje";
 }
 
-<h2>Enviar un Email</h2>
+<h2>Enviar un Mensaje</h2>
 <div class="panel panel-site-traffic col-md-8 col-md-offset-2">
     <div class="panel-heading">
         <h4 class="panel-title text-success">Envia un mensaje a cualquier miembro del grupo</h4>
