--- a/EduClass.Web/Views/Board/Index.cshtml
+++ b/EduClass.Web/Views/Board/Index.cshtml
@@ -82,11 +82,11 @@ else
                             <div class="row">
                                 <h4>Escribe un post</h4>
                             </div>
-                            <div class="row">
+                            <div class="row" id="tituloBoard">
                                 <input type="text" name="Title" class="form-control" placeholder="Título" >
                             </div>
 
-                            <div class="row" style="margin-top: 10px">
+                            <div class="row" style="margin-top: 10px" id="contenidoBoard">
                                 <textarea type="text" name="Content" class="form-control" placeholder="Contenido"></textarea>
                                 <select name="PostType" class="hidden">
                                     @foreach (var pType in (Array)ViewBag.PostTypeList)
@@ -247,3 +247,26 @@ else
         </div> 
     </div>
 }
+
+@Scripts.Render("~/bundles/jquery")
+<script>
+    $(document).ready(function () {
+
+        var anno1 = new Anno({
+            target: '#tituloBoard',
+            content: 'TEST'
+        });
+
+        var anno2 = new Anno([{
+            target: '#tituloBoard',
+            content: 'TEST1'
+        }, {
+            target: '#contenidoBoard',
+            content: 'TEST2'
+        }]);
+
+        $('#clickAyuda').click(function () {
+            anno2.show();
+        });
+    });
+</script>
