--- a/EduClass.Web/Views/Menu/_menuTop.cshtml
+++ b/EduClass.Web/Views/Menu/_menuTop.cshtml
@@ -178,8 +178,10 @@
                     <ul class="dropdown-menu pull-right">
                         <li><a href="@Url.Action("Me", "Users")"><i class="glyphicon glyphicon-user"></i> Mi Perfil</a></li>
                         <li><a href="@Url.Action("Edit","Users")"><i class="glyphicon glyphicon-cog"></i> Preferencias de Cuenta</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-question-sign"></i> Ayuda</a></li>
+                        <li><a href="#" id="clickAyuda" ><i class="glyphicon glyphicon-question-sign"></i> Ayuda</a></li>
+                        <li><a href="@Url.Action("ViewFaq","Faq")"><i class="fa fa-comment"></i> Preguntas Frecuentes</a></li>
                         <li><a href="@Url.Action("SignOut", "Users")"><i class="glyphicon glyphicon-log-out"></i> Cerrar Sesión</a></li>
+                        
                     </ul>
                 </div>
             </li>
@@ -199,7 +201,7 @@
 <script>
     $(document).ready(function () {
 
-
+       
         $("#gruposDDL li a").click(function () {
 
             var selectedId = $(this).attr('id');
